--- a/navi.html
+++ b/navi.html
@@ -10,7 +10,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('your-background-image.jpg');
+            background-image: url('navi.png');
             /* // Change background image URL here */
             background-size: cover;
             background-position: center;
